Ajustes no serviço de e-mail

--- a/Solucoes.Web/appsettings.json
+++ b/Solucoes.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SolucoesDB": "Server=DESKTOP-OB8875F;Initial Catalog=SolucoesDB;User ID=sa;Password=admin123;Encrypt=true;TrustServerCertificate=true;"
+    "SolucoesDB": "Server=DESKTOP-4CR60BJ;Initial Catalog=SolucoesDB;User ID=sa;Password=admin123;Encrypt=true;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
