--- a/Solucoes.Application/Solucoes.Application.csproj
+++ b/Solucoes.Application/Solucoes.Application.csproj
@@ -7,11 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Solucoes.Domain\Solucoes.Domain.csproj" />
+    <Compile Remove="Interfaces\Repositories\**" />
+    <EmbeddedResource Remove="Interfaces\Repositories\**" />
+    <None Remove="Interfaces\Repositories\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\Repositories\Tables\" />
+    <ProjectReference Include="..\Solucoes.Domain\Solucoes.Domain.csproj" />
   </ItemGroup>
 
 </Project>
