--- a/Solucoes.Infrastructure/Solucoes.Infrastructure.csproj
+++ b/Solucoes.Infrastructure/Solucoes.Infrastructure.csproj
@@ -7,10 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Data\Repositories\Tables\**" />
     <Compile Remove="Mail\**" />
     <Compile Remove="Smtp\**" />
+    <EmbeddedResource Remove="Data\Repositories\Tables\**" />
     <EmbeddedResource Remove="Mail\**" />
     <EmbeddedResource Remove="Smtp\**" />
+    <None Remove="Data\Repositories\Tables\**" />
     <None Remove="Mail\**" />
     <None Remove="Smtp\**" />
   </ItemGroup>
@@ -31,10 +34,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Data\Repositories\Tables\" />
   </ItemGroup>
 
 </Project>
